--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "parcel-project-template",
+  "name": "filmoteka_team_projeckt",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Vadym-Zh.github.io/filmoteka/",
+  "homepage": "https://Vadym-Zh.github.io/filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /filmoteka/"
