--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filmoteka_team_projeckt",
+  "name": "filmoteka_team_project",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://Vadym-Zh.github.io/filmoteka",
